--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -7,34 +7,59 @@
     src: url("../fonts/material-icons.woff2") format("woff2");
 }
 @font-face {
-    font-family: "Roboto";
-    font-style: normal;
+    font-family: "San Serif";
     font-weight: 100;
     src: url("../fonts/Roboto-Thin.ttf");
 }
 @font-face {
-    font-family: "Roboto";
-    font-style: normal;
+    font-family: "San Serif";
     font-weight: 300;
     src: url("../fonts/Roboto-Light.ttf");
 }
 @font-face {
-    font-family: "Roboto";
-    font-style: normal;
+    font-family: "San Serif";
     font-weight: 400;
     src: url("../fonts/Roboto-Regular.ttf");
 }
 @font-face {
-    font-family: "Roboto";
-    font-style: normal;
+    font-family: "San Serif";
     font-weight: 500;
     src: url("../fonts/Roboto-Medium.ttf");
 }
 @font-face {
-    font-family: "Roboto";
-    font-style: normal;
+    font-family: "San Serif";
     font-weight: 700;
     src: url("../fonts/Roboto-Bold.ttf");
+}
+@font-face {
+    font-family: "San Serif";
+    font-weight: 700;
+    src: url("../fonts/Roboto-Bold.ttf");
+}
+@font-face {
+    font-family: "Serif";
+    font-weight: 300;
+    src: url("../fonts/FrankRuhlLibre-Light.ttf");
+}
+@font-face {
+    font-family: "Serif";
+    font-weight: 400;
+    src: url("../fonts/FrankRuhlLibre-Regular.ttf");
+}
+@font-face {
+    font-family: "Serif";
+    font-weight: 500;
+    src: url("../fonts/FrankRuhlLibre-Medium.ttf");
+}
+@font-face {
+    font-family: "Serif";
+    font-weight: 700;
+    src: url("../fonts/FrankRuhlLibre-Bold.ttf");
+}
+@font-face {
+    font-family: "Serif";
+    font-weight: 900;
+    src: url("../fonts/FrankRuhlLibre-Black.ttf");
 }
 
 .material-icons {
@@ -53,6 +78,11 @@
     -webkit-font-smoothing: antialiased;
 }
 
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
+
 html,
 body {
     padding: 0;
@@ -62,37 +92,58 @@ body {
 html,
 body {
     background-color: rgb(38, 38, 42);
+    font-family: "San Serif";
 }
 #header-container {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: rgb(20, 20, 20);
+    background-color: rgba(20, 20, 20, 0.95);
     box-shadow: 0 5 20px 0 rgba(0, 0, 0, 0.2);
     z-index: 1400;
 }
+#header-container a {
+    color: rgba(255, 255, 255, 1);
+}
+#header-container:hover a {
+    color: rgba(255, 255, 255, 0.5);
+}
 #header {
+    user-select: none;
     margin: 0 auto;
     max-width: 1280px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
+    transition: 500ms all;
 }
 
 #header div {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #eee;
     height: 40px;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    transition: 300ms;
+}
+#header div:hover {
+    color: rgba(255, 255, 255, 1);
 }
 
 main {
-    margin-top: 40px;
+    margin-top: 0px;
     background-color: white;
 }
+
+main div {
+    margin: 0 auto;
+}
+
+main .full-width {
+    margin: 0;
+    width: 100%;
+    max-width: 100%;
+}
+
 footer {
-    font-family: "Roboto", sans-serif;
     font-weight: 300;
     color: white;
     background-color: rgb(38, 38, 42);
@@ -116,5 +167,58 @@ img.header-logo {
 }
 
 a {
+    color: black;
     text-decoration: none;
+}
+
+div.carousel {
+    position: relative;
+    max-height: 800px;
+    width: 100%;
+    background: #323232;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+div.carousel-image {
+    user-select: none;
+    position: absolute;
+    min-height: 100%;
+    min-width: 100%;
+}
+div.carousel-image::after {
+    content: "";
+    background-color: rgba(0, 0, 0, 0.4);
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+}
+
+div.carousel-title {
+    position: absolute;
+    font-size: 4rem;
+    color: white;
+    font-family: "Serif";
+    text-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
+}
+.carousel-subtitle {
+    position: absolute;
+    top: calc(50% + 40px);
+    font-size: 1.875rem;
+    color: white;
+    font-weight: 300;
+    text-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
+}
+
+.carousel-cite {
+    position: absolute;
+    bottom: 8px;
+    right: 16px;
+    font-size: 0.875rem;
+    color: rgba(255, 255, 255, 0.8);
 }
