--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -7,6 +7,12 @@
     src: url("../fonts/material-icons.woff2") format("woff2");
 }
 @font-face {
+    font-family: "SM Icons";
+    font-style: normal;
+    font-weight: 400;
+    src: url("../fonts/Social-Media-Circled.otf");
+}
+@font-face {
     font-family: "San Serif";
     font-weight: 100;
     src: url("../fonts/Roboto-Thin.ttf");
@@ -66,7 +72,22 @@
     font-family: "Material Icons";
     font-weight: normal;
     font-style: normal;
-    font-size: 24px;
+    font-size: 1rem;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+}
+.sm-icons {
+    font-family: "SM Icons";
+    font-weight: normal;
+    font-style: normal;
+    font-size: 2rem;
     line-height: 1;
     letter-spacing: normal;
     text-transform: none;
@@ -94,13 +115,35 @@ body {
     background-color: rgb(38, 38, 42);
     font-family: "San Serif";
 }
+
+h1 {
+    font-size: 4rem;
+}
+h2 {
+    font-size: 1.875rem;
+    font-family: "San Serif";
+    font-weight: 300;
+}
+h3 {
+    font-size: 1.25rem;
+    color: #666;
+    font-weight: 400;
+}
+i {
+    margin-right: 8px;
+}
+
 #header-container {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: rgba(20, 20, 20, 0.95);
+    background-color: rgba(20, 20, 20, 0.8);
     box-shadow: 0 5 20px 0 rgba(0, 0, 0, 0.2);
     z-index: 1400;
+    transition: 300ms;
+}
+#header-container:hover {
+    background-color: rgba(20, 20, 20, 1);
 }
 #header-container a {
     color: rgba(255, 255, 255, 1);
@@ -172,6 +215,8 @@ a {
 }
 
 div.carousel {
+    width: 100%;
+    max-width: 100%;
     position: relative;
     max-height: 800px;
     width: 100%;
@@ -191,7 +236,7 @@ div.carousel-image {
 }
 div.carousel-image::after {
     content: "";
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.5);
     position: absolute;
     top: 0;
     left: 0;
@@ -200,11 +245,18 @@ div.carousel-image::after {
 }
 
 div.carousel-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
     position: absolute;
-    font-size: 4rem;
     color: white;
     font-family: "Serif";
     text-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
+}
+div.carousel-title h1,
+div.carousel-title h2 {
+    margin: 0;
 }
 .carousel-subtitle {
     position: absolute;
@@ -221,4 +273,118 @@ div.carousel-title {
     right: 16px;
     font-size: 0.875rem;
     color: rgba(255, 255, 255, 0.8);
+}
+.button,
+button {
+    cursor: pointer;
+    margin: 16px;
+    font-family: "San Serif";
+    font-size: 1rem;
+    color: black;
+    padding: 16px;
+    border: 2px solid black;
+    border-radius: 0;
+    background: none;
+    text-transform: uppercase;
+    transition: 200ms;
+    outline: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.button:hover,
+button:hover {
+    background-color: black;
+    color: white;
+}
+.button.dark,
+button.dark {
+    border: 2px solid white;
+    color: white;
+}
+.button.dark:hover,
+button.dark:hover {
+    background-color: white;
+    color: black;
+}
+
+.sm-list {
+    display: flex;
+    flex-direction: column;
+    margin-top: 48px;
+}
+.sm-list button {
+    padding: 16px;
+    text-transform: none;
+    justify-content: flex-start;
+    font-size: 1.5rem;
+    width: 480px;
+    background-color: rgba(0, 0, 0, 0.4);
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.flex-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.skill-grid {
+    width: 100%;
+    display: grid;
+    grid-gap: 16px;
+    grid-template-columns: repeat(4, 1fr);
+    margin-bottom: 32px;
+}
+.skill-badge {
+    user-select: none;
+    padding: 8px;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 1.25rem;
+    border-radius: 8px;
+    transition: 200ms;
+}
+.skill-badge:hover {
+    background-color: #f0f0f0;
+}
+
+.skill-badge .gatsby-image-wrapper {
+    width: 64px;
+    height: auto;
+    margin-left: 0;
+    margin-right: 16px;
+}
+
+.skill-badge i {
+    margin-left: 8px;
+    font-size: 1.25rem;
+    color: orange;
+}
+
+.project-grid {
+    width: calc(75vmin + 64px);
+    display: grid;
+    grid-gap: 32px;
+    grid-template-columns: repeat(3, 1fr);
+    margin-bottom: 32px;
+}
+.project-badge {
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 100%;
+    height: 25vmin;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
