--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -418,39 +418,40 @@ button.dark:hover {
 .skill-badge-mini > .gatsby-image-wrapper {
     width: 32px;
     height: auto;
-    margin: 4px;
+    margin-right: 12px;
+}
+.skill-badge-mini:last-child > .gatsby-image-wrapper {
+    margin-right: 0;
 }
 .skill-badge-mini:hover {
     filter: grayscale(0);
 }
 
-.project-grid {
+.project-card-container {
     width: calc(66vw + 128px);
     display: grid;
     grid-gap: 64px;
-    grid-template-columns: repeat(3, 1fr);
+    padding: 32px;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     margin-bottom: 32px;
 }
-.project-badge {
-    background-color: #fff;
-    border-radius: 4px;
+.project-card {
     width: 100%;
-    min-height: 22vw;
+    background-color: #fff;
+    border-radius: 6px;
     display: flex;
-    justify-content: space-between;
-    filter: grayscale(1);
+    flex-direction: column;
+    filter: grayscale(0);
     box-shadow: 10px 10px 20px 0 rgba(0, 0, 0, 0.15);
     transition: 200ms;
     cursor: pointer;
-    overflow: auto;
 }
-.project-badge:hover {
-    transform: translate(2px, -3px);
+.project-card:hover {
+    transform: translate(0, -3px);
     filter: grayscale(0);
-    box-shadow: 10px 10px 30px 0 rgba(0, 0, 0, 0.25);
+    box-shadow: 10px 15px 20px 0 rgba(0, 0, 0, 0.2);
 }
-.project-badge > .gatsby-image-wrapper {
-    width: 22vw;
-    height: 22vw;
+.project-card > .gatsby-image-wrapper {
+    width: 100%;
     margin: 0;
 }
