--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -68,6 +68,10 @@
     src: url("../fonts/FrankRuhlLibre-Black.ttf");
 }
 
+* {
+    box-sizing: border-box;
+}
+
 .material-icons {
     font-family: "Material Icons";
     font-weight: normal;
@@ -118,6 +122,8 @@ body {
 
 h1 {
     font-size: 4rem;
+    display: flex;
+    align-items: center;
 }
 h2 {
     font-size: 1.875rem;
@@ -129,16 +135,21 @@ h3 {
     color: #666;
     font-weight: 400;
 }
-i {
-    margin-right: 8px;
+i.with-text {
+    margin-right: 12px;
+}
+p {
+    color: #444;
+    font-size: 1.25rem;
+    line-height: 1.75rem;
 }
 
 #header-container {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: rgba(20, 20, 20, 0.8);
-    box-shadow: 0 5 20px 0 rgba(0, 0, 0, 0.2);
+    background-color: rgba(20, 20, 20, 0.9);
+    box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.2);
     z-index: 1200;
     transition: 300ms;
 }
@@ -156,8 +167,24 @@ i {
     margin: 0 auto;
     max-width: 1280px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(75px, 1fr));
     transition: 500ms all;
+}
+#header a {
+    text-decoration: none;
+}
+@media only screen and (max-width: 767px) {
+    #header-container {
+        position: relative;
+        top: 0;
+        width: 100%;
+        background-color: rgba(20, 20, 20, 0.8);
+        z-index: 1200;
+        transition: 300ms;
+    }
+    #header {
+        font-size: 0.875rem;
+    }
 }
 
 .serif {
@@ -165,6 +192,10 @@ i {
 }
 .san-serif {
     font-family: "San Serif";
+}
+.center {
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #header div {
@@ -182,9 +213,18 @@ main {
     margin-top: 0px;
     background-color: white;
 }
-
-main div {
-    margin: 0 auto;
+section {
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-sizing: border-box;
+}
+section:nth-child(2n + 1) {
+    background-color: #eee;
+}
+section:nth-child(2n) {
+    background-color: #fff;
 }
 
 main .full-width {
@@ -231,31 +271,34 @@ img.header-logo {
 }
 
 a {
-    color: black;
+    color: #0070c9;
     text-decoration: none;
 }
+a:hover {
+    text-decoration: underline;
+}
 
-div.carousel {
+.carousel {
     width: 100%;
     max-width: 100%;
     position: relative;
-    max-height: 800px;
+    max-height: 100vh;
     width: 100%;
-    background: #323232;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
-div.carousel-image {
+.carousel-image {
     user-select: none;
     position: absolute;
     min-height: 100%;
     min-width: 100%;
 }
-div.carousel-image::after {
+.carousel-image::after {
     content: "";
     background-color: rgba(0, 0, 0, 0.4);
     position: absolute;
@@ -265,29 +308,24 @@ div.carousel-image::after {
     width: 100%;
 }
 
-div.carousel-title {
+.carousel-content {
+    max-width: 1200px;
+    box-sizing: border-box;
+    padding: 32px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     text-align: center;
     position: absolute;
     color: white;
     font-family: "Serif";
     text-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
 }
-div.carousel-title h1,
-div.carousel-title h2 {
+.carousel-content h1,
+.carousel-content h2 {
     margin: 0;
 }
-.carousel-subtitle {
-    position: absolute;
-    top: calc(50% + 40px);
-    font-size: 1.875rem;
-    color: white;
-    font-weight: 300;
-    text-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
-}
-
 .carousel-cite {
     position: absolute;
     bottom: 8px;
@@ -295,6 +333,7 @@ div.carousel-title h2 {
     font-size: 0.875rem;
     color: rgba(255, 255, 255, 0.8);
 }
+
 .button,
 button {
     cursor: pointer;
@@ -315,6 +354,7 @@ button {
 }
 .button:hover,
 button:hover {
+    text-decoration: none;
     background-color: black;
     color: white;
 }
@@ -328,6 +368,34 @@ button.dark:hover {
     background-color: white;
     color: black;
 }
+.button.invisible,
+button.invisible {
+    border-radius: 6px;
+    padding: 12px 16px;
+    color: black;
+    border: 0;
+}
+.button.invisible:hover,
+button.invisible:hover {
+    background-color: #ccc;
+}
+.button.invisible:active,
+button.invisible:active {
+    background-color: #bbb;
+}
+button.dark.invisible,
+.button.dark.invisible {
+    background-color: #333;
+    color: white;
+}
+button.dark.invisible:hover,
+.button.dark.invisible:hover {
+    background-color: #555;
+}
+button.dark.invisible:active,
+.button.dark.invisible:active {
+    background-color: #666;
+}
 
 .sm-list {
     display: flex;
@@ -335,13 +403,10 @@ button.dark:hover {
     margin-top: 48px;
 }
 .sm-list a {
-    padding: 16px;
     text-transform: none;
     justify-content: flex-start;
-    font-size: 1.5rem;
-    width: 480px;
-    background-color: rgba(0, 0, 0, 0.4);
-    text-shadow: none;
+    font-size: 1.25rem;
+    margin: 4px;
 }
 .sm-list-main i {
     color: #666;
@@ -362,7 +427,8 @@ button.dark:hover {
     color: #fff;
 }
 
-.flex-column {
+.flex,
+.flex-col {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -373,6 +439,14 @@ button.dark:hover {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+@media only screen and (max-width: 767px) {
+    .flex-row {
+        flex-direction: column;
+    }
+    .flex-row.nowrap {
+        flex-direction: row;
+    }
 }
 
 .skill-grid {
@@ -395,7 +469,7 @@ button.dark:hover {
     transition: 200ms;
 }
 .skill-badge:hover {
-    background-color: #f0f0f0;
+    background-color: #fff;
 }
 
 .skill-badge > .gatsby-image-wrapper {
@@ -409,6 +483,15 @@ button.dark:hover {
     margin-left: 8px;
     font-size: 1.25rem;
     color: orange;
+}
+@media only screen and (max-width: 767px) {
+    .skill-badge {
+        padding: 4px;
+        font-size: 1rem;
+    }
+    .skill-badge > .gatsby-image-wrapper {
+        width: 24px;
+    }
 }
 
 .skill-badge-mini {
@@ -429,10 +512,12 @@ button.dark:hover {
 
 .project-card-container {
     width: calc(66vw + 128px);
+    max-width: 100%;
+    box-sizing: border-box;
     display: grid;
     grid-gap: 64px;
     padding: 32px;
-    grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     margin-bottom: 32px;
 }
 .project-card {
@@ -456,6 +541,14 @@ button.dark:hover {
     width: 100%;
     margin: 0;
 }
+@media only screen and (max-width: 767px) {
+    .project-card-container {
+        margin: 0 auto;
+        grid-gap: 32px;
+        padding: 0;
+        grid-template-columns: 1fr;
+    }
+}
 
 input {
     font-size: 1.5rem;
@@ -469,4 +562,69 @@ input {
 #project-detail-card > div:last-child {
     overflow: auto;
     align-items: flex-start;
+}
+
+.title-bar {
+    margin-top: 40px;
+    height: 80px;
+    box-sizing: border-box;
+    background: rgba(255, 255, 255, 0.95);
+    border-bottom: 1px solid #ddd;
+    box-shadow: 0 5px 30px 0 rgba(0, 0, 0, 0.1);
+    position: fixed;
+    width: 100%;
+    display: flex;
+    z-index: 1199;
+    transition: 200ms;
+}
+.title-bar:hover {
+    background: rgba(255, 255, 255, 1);
+}
+.title-bar-reserve {
+    padding: 0;
+    margin: 0;
+    height: 120px;
+    background-color: #eee;
+}
+@media only screen and (max-width: 767px) {
+    .title-bar {
+        position: relative;
+        padding: 0;
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+    }
+    .title-bar-reserve {
+        display: none;
+    }
+}
+.title-bar div {
+    margin: 0;
+}
+
+.sm-card {
+    width: 480px;
+    background: #eee;
+    box-sizing: border-box;
+    padding: 64px 32px;
+    border-radius: 8px;
+    box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.4);
+}
+@media only screen and (max-width: 767px) {
+    .sm-card {
+        position: absolute;
+        left: 0;
+        width: 100%;
+        font-size: 0.875rem;
+    }
+}
+
+.full-width {
+    width: 100%;
+}
+
+.between {
+    display: flex;
+    justify-content: space-between;
 }
